Added home page ui

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
 	<header>
+		<div class="topbanner"></div>
 		<div class="demo-logo">
+			<img class="logo" src="img/mineLogo.png" alt="">
 			<h1>Mine</h1>
 			<small>Physical Ad Analytics</small>
 		</div>
 	</header>
+	<div class="content">
+		<ul class="menu-btns">
+			<li><button class="btn btn-danger menu-btn">Campaign Analytics</button></li>
+			<li><button class="btn btn-danger menu-btn">Create Ad</button></li>
+		</ul>
+	</div>
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
