Finished home page

--- a/index.html
+++ b/index.html
@@ -5,22 +5,39 @@
 	<title>Mine</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/flat-ui.css">
+
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/analytics.css">
+	<link rel="stylesheet" href="css/create.css">
 </head>
 <body>
 	<header>
 		<div class="topbanner"></div>
-		<div class="demo-logo">
-			<img class="logo" src="img/mineLogo.png" alt="">
-			<h1>Mine</h1>
-			<small>Physical Ad Analytics</small>
-		</div>
 	</header>
 	<div class="content">
-		<ul class="menu-btns">
-			<li><button class="btn btn-danger menu-btn">Campaign Analytics</button></li>
-			<li><button class="btn btn-danger menu-btn">Create Ad</button></li>
-		</ul>
+		<div id="home">
+			<div class="demo-logo">
+				<img class="logo" src="img/mineLogo.png" alt="">
+				<h1>Mine</h1>
+				<small>Physical Ad Analytics</small>
+			</div>
+
+			<ul class="menu-btns">
+				<li class="analyticsBtn"><button class="btn btn-danger menu-btn">Campaign Analytics</button></li>
+				<li class="createBtn"><button class="btn btn-danger menu-btn">Create Ad</button></li>
+			</ul>
+		</div>
+		<div id="analytics">
+			hi
+		</div>
+		<div id="create">
+			<div class="leftArea">
+
+			</div>
+			<div class="rightArea">
+
+			</div>
+		</div>
 	</div>
 </body>
 <script src="js/jquery.min.js"></script>
