Added left and right columns and made transition work

--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
 			</ul>
 		</div>
 		<div id="analytics">
-			hi
+			Analytics
+			<div class="leftArea">
+				<ul class="pictureList">
+				</ul>
+			</div>
+			<div class="rightArea">
+				<div class="pictureArea"></div>
+			</div>
 		</div>
 		<div id="create">
 			<div class="leftArea">
-
+				<ul class="pictureList">
+				</ul>
 			</div>
 			<div class="rightArea">
-
+				<div class="pictureArea"></div>
 			</div>
 		</div>
 	</div>
