Added gradient to li s

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 		<div id="analytics">
 			Analytics
 			<div class="leftArea">
-				<ul class="pictureList">
+				<ul class="campaignList">
+					<li>Campaign 1</li>
+					<li>Campaign 2</li>
+					<li>Campaign 3</li>
+					<li>Campaign 4</li>
+					<li>Campaign 5</li>
 				</ul>
 			</div>
 			<div class="rightArea">
