--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			<div class="rightArea">
 				<div class="pictureArea">
 					<div class="vizArea"></div>
+					<div class="vizFooter"><button class="btn">Export Data</button></div>
 				</div>
 			</div>
 		</div>
